# obj2schem

./: CMakeLists.txt  LICENSE  README.md  main.cu
tests/ibuki/: ibuki.mtl  ibuki.schem
tests/sportscar/: sportsCar2.schem
